# pierre

./: .clang-format  .clang-tidy  .cliff.toml  .cmake-format.yaml  .cspell.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamlfmt.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  vcpkg.json
.github/: dependabot.yml  zizmor.yml
.github/actions/setup-vcpkg/: action.yml
.github/workflows/: lint.yml  release.yml  test.yml
cmake/: reset-coverage-counters.cmake
scripts/: generate-third-party-notices.sh  make-release.sh
src/: CMakeLists.txt  cli.cpp  cli.h  env.cpp  env.h  logger.cpp  logger.h  main.cpp  processor.cpp  processor.h  timer.h  version.h.in
tests/: CMakeLists.txt  test-processor.cpp
